adds keymap width feature, doesn't yet update when changes are made in menu

--- a/frontend/static/html/pages/settings.html
+++ b/frontend/static/html/pages/settings.html
@@ -1726,7 +1726,7 @@
         <i class="fas fa-arrows-alt-h"></i>
         <span>page width</span>
       </div>
-      <div class="text">Control the width of the content.</div>
+      <div class="text">Controls the width of the content.</div>
       <div class="buttons">
         <div class="button" pageWidth="100" tabindex="0" onclick="this.blur();">
           100%
@@ -1786,6 +1786,47 @@
           onclick="this.blur();"
         >
           next
+        </div>
+      </div>
+    </div>
+    <div class="section keymapWidth">
+      <div class="groupTitle">
+        <i class="fas fa-keyboard"></i>
+        <span>keymap width</span>
+      </div>
+      <div class="text">Controls the width of the keymap.</div>
+      <div class="buttons">
+        <div
+          class="button"
+          keymapWidth="100"
+          tabindex="0"
+          onclick="this.blur();"
+        >
+          100%
+        </div>
+        <div
+          class="button"
+          keymapWidth="125"
+          tabindex="0"
+          onclick="this.blur();"
+        >
+          125%
+        </div>
+        <div
+          class="button"
+          keymapWidth="150"
+          tabindex="0"
+          onclick="this.blur();"
+        >
+          150%
+        </div>
+        <div
+          class="button"
+          keymapWidth="200"
+          tabindex="0"
+          onclick="this.blur();"
+        >
+          200%
         </div>
       </div>
     </div>
